2017-02-22  Aakash Jain  <aakash_jain@apple.com>

        Export m_isLoggingEnabled symbol from MemoryMeasure.h
        https://bugs.webkit.org/show_bug.cgi?id=168760

        Reviewed by Alexey Proskuryakov.

        * WebKit.iOS.exp: Exporting m_isLoggingEnabled symbol.

2017-02-22  Aakash Jain  <aakash_jain@apple.com>

        Move instance members from WebPDFViewPlaceholder.h to implementation file
        https://bugs.webkit.org/show_bug.cgi?id=168705

        Reviewed by Tim Horton.

        * WebView/WebPDFViewPlaceholder.h: Moving instance members to implementation file.
        * WebView/WebPDFViewPlaceholder.mm: Ditto.

2017-02-22  Aakash Jain  <aakash_jain@apple.com>

        Move instance members from WebSelectionRect.h to implementation file
        https://bugs.webkit.org/show_bug.cgi?id=168732

        Reviewed by Tim Horton.

        * WebCoreSupport/WebSelectionRect.h: Moving instance members to implementation file.
        * WebCoreSupport/WebSelectionRect.m: Ditto.

2017-02-22  Aakash Jain  <aakash_jain@apple.com>

        Move iOS specific symbols to WebKit.ios.exp
        https://bugs.webkit.org/show_bug.cgi?id=168726

        Reviewed by Alexey Proskuryakov.

        * WebKit.iOS.exp:

2017-02-21  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r212768.
        https://bugs.webkit.org/show_bug.cgi?id=168698

        Rolling out since this would break other projects. (Requested
        by aakashjain on #webkit).

        Reverted changeset:

        "[iOS] Remove old WebKit1 MemoryMeasure helper."
        https://bugs.webkit.org/show_bug.cgi?id=168675
        http://trac.webkit.org/changeset/212768

2017-02-21  Andreas Kling  <akling@apple.com>

        [iOS] Remove old WebKit1 MemoryMeasure helper.
        <https://webkit.org/b/168675>

        Reviewed by Sam Weinig.

        Remove the MemoryMeasure logging helper from the WebKit1 days. It was using an old way